--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </style>
   </head>
   <body>
-    <div id="hello"></div>
+    <div id="root"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="dist/bundle.js" type="text/javascript"></script>
   </body>
